@@ -1,3 +1,11 @@
+2001-12-19  Bradford Hovinen  <hovinen@ximian.com>
+
+	* keyboard-properties.c (apply_settings): Comment out; pending
+	removal to gnome-settings-daemon
+	(setup_dialog): Set conversion functions
+	(rate_to_widget, rate_from_widget, delay_to_widget) 
+	(delay_from_widget): Implement
+
 2001-12-18  Bradford Hovinen  <hovinen@ximian.com>
 
 	* keyboard-properties.c: Port to GConf/GNOME 2.0. Many changes.
